--- a/src/app/card-detail/card-detail.component.html
+++ b/src/app/card-detail/card-detail.component.html
@@ -1,7 +1,12 @@
-<div class="card" *ngIf="user$ | async as user">
+<div class="card" *ngIf="user$ | async as user; else loading">
   <div class="card-body">
     <h4 class="card-title">{{user.name}}</h4>
     <p class="card-text">{{user.email}}</p>
     <a routerLink="/users"><<< Back</a>
   </div>
 </div>
+
+<ng-template #loading>
+  <ngx-skeleton-loader count="3" appearance="line"></ngx-skeleton-loader>
+</ng-template>
+
